# face_identification

./: CMakeLists.txt  README.md  dd.txt  facecrop.cpp  facedetect.cpp  facedetecttest.cpp  greyconv.cpp  proposal.tex  test.cpp  train.cpp
